--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <!-- Required meta tags -->
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
@@ -16,8 +16,7 @@
     <script src="js/parallax.min.js"></script>
     <script src="https://kit.fontawesome.com/90b47eb758.js" crossorigin="anonymous"></script>
     <!-- Icon -->
-    <!-- <link rel="icon" type="image/png" href="http://grahamstodolski.com/favicon.png"> -->
-    <link rel="icon" type="image/png" href="file:///Users/grahamstodolski/Desktop/Personal%20Website/img/favicon.png">
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
@@ -27,22 +26,22 @@
   <body id="home">
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0" nonce="0OZhBWlx"></script>
+
     <header>
-      <div class="navbar">
-        <nav id="mainNav">
-          <span style="width: 40%;">
-            <h1 class="logo"><a class="js-scroll-trigger" href="#home"><img class="headshot" src="img/headshot.png">Graham Stodolski</a></h1>
-          </span>
-          <ul>
-            <li><a href="Graham-Stodolski-Resume.pdf" download>Resume</a></li>
-            <li><a class="js-scroll-trigger" href="#about">About</a></li>
-            <li><a class="js-scroll-trigger" href="#experience">Experience</a></li>
-            <li><a class="js-scroll-trigger" href="#media">Media</a></li>
-            <li><a class="js-scroll-trigger" href="#contact">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
+      <nav id="mainNav">
+        <ul>
+          <li class="logo">
+            <h1 class="logo-text"><a class="js-scroll-trigger" href="#home"><img class="headshot" src="img/headshot.png">Graham Stodolski</a></h1>
+          </li>
+          <li class="item"><a href="Graham-Stodolski-Resume.pdf" download class="item-link">Resume</a></li>
+          <li class="item"><a class="item-link js-scroll-trigger" href="#about">About</a></li>
+          <li class="item"><a class="item-link js-scroll-trigger" href="#experience">Experience</a></li>
+          <li class="item"><a class="item-link js-scroll-trigger" href="#media">Media</a></li>
+          <li class="item"><a class="item-link js-scroll-trigger" href="#contact">Contact</a></li>
+        </ul>
+      </nav>
     </header>
+
     <div id="content">
       <div class="parallax" data-parallax="scroll" data-z-index="" data-image-src="img/photo1.jpg" style="padding: 200px 0;">
         <h1 class="intro">Hi, I'm Graham.</h1>
