--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0" nonce="0OZhBWlx"></script>
 
     <header>
-      <nav id="mainNav">
+      <nav id="mainNav" class="navbar">
         <ul>
           <li class="logo">
             <h1 class="logo-text"><a class="js-scroll-trigger" href="#home"><img class="headshot" src="img/headshot.png">Graham Stodolski</a></h1>
@@ -208,7 +208,7 @@
     </div>
 
     <!-- Smooth scroll -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/scroll.js"></script>
   </body>
 </html>
