--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header>
       <nav id="mainNav" class="navbar">
         <ul>
-          <li class="logo">
+          <li class="logo" style="list-style-type: none;">
             <h1 class="logo-text"><a class="js-scroll-trigger" href="#home"><img class="headshot" src="img/headshot.png">Graham Stodolski</a></h1>
           </li>
           <li class="item"><a href="Graham-Stodolski-Resume.pdf" download class="item-link">Resume</a></li>
