--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li class="item"><a href="Graham-Stodolski-Resume.pdf" download class="item-link">Resume</a></li>
           <li class="item"><a class="item-link js-scroll-trigger" href="#about">About</a></li>
           <li class="item"><a class="item-link js-scroll-trigger" href="#experience">Experience</a></li>
-          <li class="item"><a class="item-link js-scroll-trigger" href="#media">Media</a></li>
+          <!-- <li class="item"><a class="item-link js-scroll-trigger" href="#media">Media</a></li> -->
           <li class="item"><a class="item-link js-scroll-trigger" href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -49,7 +49,7 @@
 
       <section class="about">
         <h2 id="about">About</h2>
-        <p>I'm a rising sophomore at Yale double-majoring in Computer Science and Film and Media Studies. I'm heavily involved in the arts scene on campus, performing jazz and theater, and love technology, problem-solving, and learning new things.</p>
+        <p>I'm a rising sophomore at Yale double-majoring in Computer Science and Film & Media Studies. I'm heavily involved in the arts scene on campus, performing jazz and theater, and love technology, problem-solving, and learning new things.</p>
         <p>Born and raised in New York City, I'm currently located in Brooklyn, NY. Here's a bit about my education:</p>
         <div class="container">
           <div class="row">
@@ -58,16 +58,17 @@
               <p class="education">GPA: 3.9</p>
               <p class="education">Activities:</p>
               <ul style="margin-left: 10px;">
-                <li class="activities">Executive Board of Yale Undergraduate Jazz Collective</li>
-                <li class="activities">Pierson College Outreach Coordinator</li>
+                <li class="activities">Events Director of Code Haven</li>
+                <li class="activities">Student Programming Officer of Yale Undergraduate Jazz Collective</li>
                 <li class="activities">Yale Jazz Ensemble</li>
                 <li class="activities">Teacher for Splash at Yale</li>
               </ul>
               <p class="education">Featured coursework:</p>
               <ul style="margin-left: 10px;">
                 <li class="activities">CS 50: Introduction to Programming</li>
-                <li class="activities">CPSC 201: Introduction to Computer Science</li>
+                <li class="activities">CPSC 223: Data Structures and Programming Techniques</li>
                 <li class="activities">CPSC/MUSI 035: 21st Century Computer Music</li>
+                <li class="activities">FILM 411: The Films of Alfred Hitchcock</li>
                 <li class="activities">PHYS S101E: Movie Physics</li>
               </ul>
               <p class="education">Awards and Programs:</p>
@@ -112,12 +113,23 @@
         <div class="card-deck">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Web Developer</h5>
+              <h5 class="card-title">Product/Network Intern</h5>
+              <h6 class="card-subtitle">@ <a href="https://www.teamshares.com/" target="_blank">Teamshares</a></h6>
+              <p class="card-text" style="margin-top: 20px; margin-left: 15px;">I help build software for TeamsharesOS, our customor-facing product. I first gained hands-on experience in business development, operations, and strategy as a contributing member of the Network team. After proving my problem-solving skills and work ethic, I was moved to the Product team to work on software with a unique understanding of clients' needs.</p>
+              <p class="card-text">Languages: Ruby, HTML, CSS, Javascript, Slim<br>
+                Tools: Rails, git, Tailwind</p>
+            </div>
+            <div class="card-footer" style="font-size: 14px;">August 2020 - Present</div>
+          </div>
+
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Full Stack Developer</h5>
               <h6 class="card-subtitle">@ <a href="https://www.dcyphr.org/" target="_blank">dcyphr</a></h6>
               <p class="card-text" style="margin-top: 20px; margin-left: 15px;">I helped create and maintain the website for Yale student-run startup dcyphr, which aims to make scientific papers and research more accessible by publicizing summaries and related resources. Responsibilities include implementing various user-friendly features (like, comment, and reply system, bookmarking tool) and debugging on both the front- and back-ends.</p>
               <p class="card-text">Languages: Python, HTML, CSS, Javascript</p>
             </div>
-            <div class="card-footer" style="font-size: 14px;">September 2019 - Present</div>
+            <div class="card-footer" style="font-size: 14px;">September 2019 - May 2020</div>
           </div>
 
           <div class="card">
@@ -162,12 +174,12 @@
         </div>
       </section>
 
-      <div class="parallax" data-parallax="scroll" data-z-index="" data-image-src="img/photo2.jpg"></div>
+      <!-- <div class="parallax" data-parallax="scroll" data-z-index="" data-image-src="img/photo2.jpg"></div>
 
       <section class="media-section" id="media">
         <h2>Media</h2>
         <p style="margin-bottom: 0px;">From a young age, I've always loved performing. Check out some of my most recent projects here:</p>
-        <div class="container" style="background-color: white; margin-bottom: 0px;">
+        <!--<div class="container" style="background-color: white; margin-bottom: 0px;">
           <div class="row">
             <div class="col">
               <center><div class="fb-post" data-href="https://www.facebook.com/graham.stodolski/posts/1169353093415496" data-show-text="true" data-width="">
@@ -184,7 +196,25 @@
             </div>
           </div>
         </div>
-      </section>
+
+        <div class="card-deck">
+          <div class="card">
+            <div class="card-body">
+              <center><div class="fb-post" data-href="https://www.facebook.com/graham.stodolski/posts/1169353093415496" data-show-text="true" data-width="">
+                <blockquote cite="https://developers.facebook.com/graham.stodolski/posts/1169353093415496" class="fb-xfbml-parse-ignore"><p>I wrote a program that plays randomly-generated jazz solos for my first-year seminar, 21st Century Computer Music. Transcribed one on the sax. Here&#039;s the comparison!</p>Posted by <a href="https://www.facebook.com/graham.stodolski">Graham Stodolski</a> on&nbsp;<a href="https://developers.facebook.com/graham.stodolski/posts/1169353093415496">Monday, May 4, 2020</a></blockquote>
+              </div></center>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-body">
+              <div class="iframe-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/YbDhVTX07TI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section> -->
 
       <div class="parallax" data-parallax="scroll" data-z-index="" data-image-src="img/photo4.jpg"></div>
 
@@ -196,6 +226,11 @@
             <div class="col">
               <p><a href="mailto:graham.stodolski@yale.edu" target="_blank" class="fas fa-at fa-spin-hover icon"></a>Email</p>
             </div>
+            <div class="col">
+              <p><a href="https://github.com/gstodolski" target="_blank" class="fab fa-github fa-spin-hover icon"></a>Github</p>
+            </div>
+          </div>
+          <div class="row">
             <div class="col">
               <p><a href="https://www.linkedin.com/in/grahamstodolski/" target="_blank" class="fab fa-linkedin-in fa-spin-hover icon"></a>LinkedIn</p>
             </div>
