--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <!-- Stylesheet -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- Necessities -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/parallax.min.js"></script>
     <script src="https://kit.fontawesome.com/90b47eb758.js" crossorigin="anonymous"></script>
@@ -20,25 +18,29 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <title>Graham Stodolski</title>
   </head>
 
   <body id="home">
-    <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0" nonce="0OZhBWlx"></script>
-
     <header>
-      <nav id="mainNav" class="navbar">
-        <ul>
-          <li class="logo" style="list-style-type: none;">
-            <h1 class="logo-text"><a class="js-scroll-trigger" href="#home"><img class="headshot" src="img/headshot.png">Graham Stodolski</a></h1>
-          </li>
-          <li class="item"><a href="Graham-Stodolski-Resume.pdf" download class="item-link">Resume</a></li>
-          <li class="item"><a class="item-link js-scroll-trigger" href="#about">About</a></li>
-          <li class="item"><a class="item-link js-scroll-trigger" href="#experience">Experience</a></li>
-          <!-- <li class="item"><a class="item-link js-scroll-trigger" href="#media">Media</a></li> -->
-          <li class="item"><a class="item-link js-scroll-trigger" href="#contact">Contact</a></li>
-        </ul>
+      <nav class="navbar navbar-expand-lg navbar-light py-3">
+        <div class="container-fluid">
+          <div class="typewriter">
+            <h3><a href="#home" class="navbar-brand">graham stodolski</a></h3>
+          </div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="navbar-nav">
+              <a class="nav-link hvr-underline-reveal" href="Graham-Stodolski-Resume.pdf" download><span>resume</span></a>
+              <a class="nav-link hvr-underline-reveal" href="#about">about</a>
+              <a class="nav-link hvr-underline-reveal" href="#experience">experience</a>
+              <a class="nav-link hvr-underline-reveal" href="#contact">contact</a>
+            </div>
+          </div>
+        </div>
       </nav>
     </header>
 
@@ -47,9 +49,9 @@
         <h1 class="intro">Hi, I'm Graham.</h1>
       </div>
 
-      <section class="about">
-        <h2 id="about">About</h2>
-        <p>I'm a rising sophomore at Yale double-majoring in Computer Science and Film & Media Studies. I'm heavily involved in the arts scene on campus, performing jazz and theater, and love technology, problem-solving, and learning new things.</p>
+      <section class="about" id="about">
+        <h2>about</h2>
+        <p>I'm a sophomore at Yale double-majoring in Computer Science and Film & Media Studies. I'm heavily involved in the arts scene on campus, performing jazz and theater, and love technology, problem-solving, and learning new things.</p>
         <p>Born and raised in New York City, I'm currently located in Brooklyn, NY. Here's a bit about my education:</p>
         <div class="container">
           <div class="row">
@@ -109,20 +111,20 @@
       <div class="parallax" data-parallax="scroll" data-z-index="" data-image-src="img/photo3.jpg"></div>
 
       <section class="experience" id="experience">
-        <h2>Experience</h2>
-        <div class="card-deck">
-          <div class="card">
+        <h2>experience</h2>
+        <div class="row row-cols-1 row-cols-lg-3 mx-4 g-2">
+          <div class="col card">
             <div class="card-body">
               <h5 class="card-title">Product/Network Intern</h5>
               <h6 class="card-subtitle">@ <a href="https://www.teamshares.com/" target="_blank">Teamshares</a></h6>
               <p class="card-text" style="margin-top: 20px; margin-left: 15px;">I help build software for TeamsharesOS, our customor-facing product. I first gained hands-on experience in business development, operations, and strategy as a contributing member of the Network team. After proving my problem-solving skills and work ethic, I was moved to the Product team to work on software with a unique understanding of clients' needs.</p>
               <p class="card-text">Languages: Ruby, HTML, CSS, Javascript, Slim<br>
-                Tools: Rails, git, Tailwind</p>
+                Tools: Rails, git, Tailwind, Figma</p>
             </div>
             <div class="card-footer" style="font-size: 14px;">August 2020 - Present</div>
           </div>
 
-          <div class="card">
+          <div class="col card">
             <div class="card-body">
               <h5 class="card-title">Full Stack Developer</h5>
               <h6 class="card-subtitle">@ <a href="https://www.dcyphr.org/" target="_blank">dcyphr</a></h6>
@@ -132,7 +134,7 @@
             <div class="card-footer" style="font-size: 14px;">September 2019 - May 2020</div>
           </div>
 
-          <div class="card">
+          <div class="col card">
             <div class="card-body">
               <h5 class="card-title">Research Assistant</h5>
               <h6 class="card-subtitle">@ <a href="https://interactive-machines.gitlab.io/" target="_blank">Yale Interactive Machines Group</a></h6>
@@ -142,19 +144,17 @@
             </div>
             <div class="card-footer" style="font-size: 14px;">June 2020 - August 2020</div>
           </div>
-        </div>
 
-        <div class="card-deck">
-          <div class="card">
+          <div class="col card">
             <div class="card-body">
               <h5 class="card-title">Pierson Aide</h5>
               <h6 class="card-subtitle">@ <a href="https://pierson.yalecollege.yale.edu/" target="_blank">Pierson College, Yale University</a></h6>
               <p class="card-text" >I help create and perpetuate a strong sense of community within Pierson, one of Yale's 14 residential colleges. I work closely with the Head of College and his administrative staff in the college office and helped run college-sponsored events, such as visiting speakers, trips, and study breaks.</p>
             </div>
-            <div class="card-footer" style="font-size: 14px;">March 2020 - Present</div>
+            <div class="card-footer" style="font-size: 14px;">Starting Fall 2021</div>
           </div>
 
-          <div class="card">
+          <div class="col card">
             <div class="card-body">
               <h5 class="card-title">Media Technician</h5>
               <h6 class="card-subtitle">@ <a href="https://studenttechnology.yale.edu/" target="_blank">Yale Student Technology Collaborative</a></h6>
@@ -163,7 +163,7 @@
             <div class="card-footer" style="font-size: 14px;">October 2019 - February 2020</div>
           </div>
 
-        <div class="card">
+          <div class="col card">
             <div class="card-body">
               <h5 class="card-title">Scooper</h5>
               <h6 class="card-subtitle">@ <a href="https://www.amplehills.com/" target="_blank">Ample Hills Creamery</a></h6>
@@ -171,55 +171,12 @@
             </div>
             <div class="card-footer" style="font-size: 14px;">June 2019 - August 2019</div>
           </div>
-        </div>
       </section>
-
-      <!-- <div class="parallax" data-parallax="scroll" data-z-index="" data-image-src="img/photo2.jpg"></div>
-
-      <section class="media-section" id="media">
-        <h2>Media</h2>
-        <p style="margin-bottom: 0px;">From a young age, I've always loved performing. Check out some of my most recent projects here:</p>
-        <!--<div class="container" style="background-color: white; margin-bottom: 0px;">
-          <div class="row">
-            <div class="col">
-              <center><div class="fb-post" data-href="https://www.facebook.com/graham.stodolski/posts/1169353093415496" data-show-text="true" data-width="">
-                <blockquote cite="https://developers.facebook.com/graham.stodolski/posts/1169353093415496" class="fb-xfbml-parse-ignore"><p>I wrote a program that plays randomly-generated jazz solos for my first-year seminar, 21st Century Computer Music. Transcribed one on the sax. Here&#039;s the comparison!</p>Posted by <a href="https://www.facebook.com/graham.stodolski">Graham Stodolski</a> on&nbsp;<a href="https://developers.facebook.com/graham.stodolski/posts/1169353093415496">Monday, May 4, 2020</a></blockquote>
-              </div></center>
-            </div>
-            <div class="col" style="margin-top: auto; margin-bottom: auto;">
-              <div class="iframe-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/YbDhVTX07TI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div><br>
-              <div class="iframe-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/h1XRmwjjmIM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="card-deck">
-          <div class="card">
-            <div class="card-body">
-              <center><div class="fb-post" data-href="https://www.facebook.com/graham.stodolski/posts/1169353093415496" data-show-text="true" data-width="">
-                <blockquote cite="https://developers.facebook.com/graham.stodolski/posts/1169353093415496" class="fb-xfbml-parse-ignore"><p>I wrote a program that plays randomly-generated jazz solos for my first-year seminar, 21st Century Computer Music. Transcribed one on the sax. Here&#039;s the comparison!</p>Posted by <a href="https://www.facebook.com/graham.stodolski">Graham Stodolski</a> on&nbsp;<a href="https://developers.facebook.com/graham.stodolski/posts/1169353093415496">Monday, May 4, 2020</a></blockquote>
-              </div></center>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card-body">
-              <div class="iframe-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/YbDhVTX07TI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section> -->
 
       <div class="parallax" data-parallax="scroll" data-z-index="" data-image-src="img/photo4.jpg"></div>
 
       <section class="contact" id="contact" style="margin-top: 0px;">
-        <h2>Contact</h2>
+        <h2>contact</h2>
         <p style="margin-bottom: 0px!important;">Click an icon to get in touch! I'd love to chat!</p>
         <div class="container" style="background-color: white; margin-top: 0px!important;">
           <div class="row">
@@ -242,8 +199,7 @@
       </section>
     </div>
 
-    <!-- Smooth scroll -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="js/scroll.js"></script>
+    <!-- Bootstrap js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
   </body>
 </html>
