--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <body id="home">
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light py-3">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
         <div class="container-fluid">
           <div class="typewriter">
             <h3><a href="#home" class="navbar-brand">graham stodolski</a></h3>
@@ -51,11 +51,11 @@
 
       <section class="about" id="about">
         <h2>about</h2>
-        <p>I'm a sophomore at Yale double-majoring in Computer Science and Film & Media Studies. I'm heavily involved in the arts scene on campus, performing jazz and theater, and love technology, problem-solving, and learning new things.</p>
+        <p>I'm a sophomore at Yale studying Computer Science and Film & Media Studies. I'm heavily involved in the arts scene on campus, performing jazz and theater, and love technology, problem-solving, and learning new things.</p>
         <p>Born and raised in New York City, I'm currently located in Brooklyn, NY. Here's a bit about my education:</p>
         <div class="container">
-          <div class="row">
-            <div class="col" style="border-right: 1px solid #ccc;">
+          <div class="row row-cols-1 row-cols-lg-2">
+            <div class="col gray-right-border">
               <span style="color: #0f4d92; font-weight: 550;">Yale University</span>  <span class="education">(2019-2023)</span>
               <p class="education">GPA: 3.9</p>
               <p class="education">Activities:</p>
@@ -87,7 +87,7 @@
                 <li class="activities">Student Body Co-President and Equity Council Member</li>
                 <li class="activities">Key Society Tour Guide and Ambassador</li>
                 <li class="activities">Jazz Ensemble and Combo</li>
-                <li class="activities">Four-Star Member of International Thespain Society</li>
+                <li class="activities">Four-Star Member of International Thespian Society</li>
                 <li class="activities">Math Team</li>
               </ul>
               <p class="education">Featured coursework:</p>
@@ -200,6 +200,7 @@
     </div>
 
     <!-- Bootstrap js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
   </body>
 </html>
