Change mobile card margin

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="card-body">
               <h5 class="card-title">Product/Network Intern</h5>
               <h6 class="card-subtitle">@ <a href="https://www.teamshares.com/" target="_blank">Teamshares</a></h6>
-              <p class="card-text" style="margin-top: 20px; margin-left: 15px;">I help build software for TeamsharesOS, our customor-facing product. I first gained hands-on experience in business development, operations, and strategy as a contributing member of the Network team. After proving my problem-solving skills and work ethic, I was moved to the Product team to work on software with a unique understanding of clients' needs.</p>
+              <p class="card-text">I help build software for TeamsharesOS, our customor-facing product. I first gained hands-on experience in business development, operations, and strategy as a contributing member of the Network team. After proving my problem-solving skills and work ethic, I was moved to the Product team to work on software with a unique understanding of clients' needs.</p>
               <p class="card-text">Languages: Ruby, HTML, CSS, Javascript, Slim<br>
                 Tools: Rails, git, Tailwind, Figma</p>
             </div>
