Add headshot to about section

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
       <section class="about" id="about">
         <h2>about</h2>
+        <img src="img/headshot.png" width="60%" style="display: block; margin-left: auto; margin-right: auto; max-width: 700px;">
         <p>I'm a sophomore at Yale studying Computer Science and Film & Media Studies. I'm heavily involved in the arts scene on campus, performing jazz and theater, and love technology, problem-solving, and learning new things.</p>
         <p>Born and raised in New York City, I'm currently located in Brooklyn, NY. Here's a bit about my education:</p>
         <div class="container">
