Add section ids

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
 
       <!-- About Me -->
-    <section class="block pt-12 md:flex">
+    <section class="block pt-12 md:flex" id="about">
         <div class="pb-6 md:w-full md:max-w-150 md:p-0">
             <h2 class="font-xs font-light tracking-widest text-sm text-gray-600 leading-normal uppercase">About Me</h2>
         </div>
@@ -80,7 +80,7 @@
     </section>
 
       <!-- Experience -->
-      <section class="block pt-12 md:flex">
+      <section class="block pt-12 md:flex" id="experience">
         <div class="pb-6 md:w-full md:max-w-150 md:p-0">
           <h2 class="font-xs font-light tracking-widest text-sm text-gray-600 leading-normal uppercase">Experience</h2>
         </div>
@@ -130,8 +130,8 @@
         </div>
       </section>
 
-      <!-- Projects -->
-      <section class="block pt-12 md:flex">
+      <!-- Education -->
+      <section class="block pt-12 md:flex" id="education">
         <div class="pb-6 md:w-full md:max-w-150 md:p-0">
           <h2 class="font-xs font-light tracking-widest text-sm text-gray-600 leading-normal uppercase">Education</h2>
         </div>
@@ -207,7 +207,7 @@
       </section> -->
 
       <!-- Skills -->
-      <section class="block pt-12 md:flex">
+      <section class="block pt-12 md:flex" id="skills">
         <div class="pb-6 md:w-full md:max-w-150 md:p-0">
           <h2 class="font-xs font-light tracking-widest text-sm text-gray-600 leading-normal uppercase">Skills</h2>
         </div>
