--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Graham Stodolski</title>
-  <meta name="description" content="Product Manager based in NYC." />
-  <meta property="og:title" content="Graham Stodolski" />
-  <meta property="og:description" content="Product Manager based in NYC." />
-  <meta property="og:type" content="website" />
-  <meta name="theme-color" content="#663399" />
-  <link rel="icon" href="/favicon-32x32.png" type="image/png" />
-  <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Graham Stodolski</title>
+    <meta name="description" content="Product Manager based in NYC." />
+    <meta property="og:title" content="Graham Stodolski" />
+    <meta property="og:description" content="Product Manager based in NYC." />
+    <meta property="og:type" content="website" />
+    <meta name="theme-color" content="#663399" />
+    <link rel="icon" href="img/favicon.png" type="image/png" />
+    <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-  <div class="relative">
-    <svg class="hidden fixed transform right-0 top-0 z-0 xl:block" width="300" height="900" fill="none" viewBox="0 0 300 900">
-      <defs>
-        <pattern id="dot-pattern" x="0" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
-          <rect x="0" y="0" width="4" height="4" fill="#edf2f7"></rect>
-        </pattern>
-      </defs>
-      <rect width="300" height="900" fill="url(#dot-pattern)"></rect>
-    </svg>
+    <div class="relative">
+        <svg class="hidden fixed transform right-0 top-0 z-0 xl:block" width="300" height="900" fill="none" viewBox="0 0 300 900">
+            <defs>
+                <pattern id="dot-pattern" x="0" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
+                <rect x="0" y="0" width="4" height="4" fill="#edf2f7"></rect>
+                </pattern>
+            </defs>
+            <rect width="300" height="900" fill="url(#dot-pattern)"></rect>
+        </svg>
 
     <div class="p-8 relative max-w-screen-xl xs:p-24">
       <div class="block mb-6 md:flex">
