--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:description" content="Product Manager based in NYC." />
     <meta property="og:type" content="website" />
     <meta property'og:image" content="https://grahamstodolski.com/img/favicon.png" />
-    <meta property="og:url" content="https://grahamstodolski.com"
+    <meta property="og:url" content="https://grahamstodolski.com" />
     <meta name="theme-color" content="#663399" />
     <link rel="icon" href="img/favicon.png" type="image/png" />
     <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
