--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <div class="mb-6">
             <div class="flex justify-between items-baseline">
               <h3 class="font-semibold text-gray-900 pb-1 hover:underline hover:text-black">
-                <a href="https://interactive-machines.gitlab.io/">AI Research Assitant @ Yale Interactive Machines Group</a>
+                <a href="https://interactive-machines.gitlab.io/">AI Research Assistant @ Yale Interactive Machines Group</a>
               </h3>
               <span class="text-sm text-gray-500 font-light pr-8 hidden md:block">May 20 - Aug 20</span>
             </div>
