Rename skills section

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </div>
         <div class="flex-none text-lg text-gray-600 font-light md:flex-1 md:pl-20">
             <div class="mb-6">
-                <h3 class="font-semibold text-gray-900 pb-1">Product Skills</h3>
+                <h3 class="font-semibold text-gray-900 pb-1">Product Management</h3>
                 <p>Product vision and roadmapping, product lifecycle management, user-centered design, setting KPIs, stakeholder management, cross-functional collaboration, communication and presentation, data analysis</p>
             </div>
             <div class="mb-6">
