--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         </div>
         <div class="flex-none text-lg text-gray-600 font-light md:flex-1 md:pl-20">
             <div class="mb-6">
-            <p>Born and raised in Brooklyn, NY. Graduated from Yale in 2023 with a B.S. in Computer Science.</p>
+            <p>Born and raised in Brooklyn, NY. Graduated from Yale with a B.S. in Computer Science.</p>
             <p>Results-driven product manager with a background in software engineering, finance, and growing startups.</p>
-            <p>Ask me about: playing the saxophone, classic Hollywood movies, chicken parm.</p>
+            <p><a class="hover:underline hover:text-blue" href="mailto:grahamstodolski@gmail.com">Ask me about:</a> playing the saxophone, classic Hollywood movies, chicken parm.</p>
             </div>
         </div>
     </section>
@@ -90,12 +90,12 @@
           <div class="mb-6">
             <div class="flex justify-between items-baseline">
               <h3 class="font-semibold text-gray-900 pb-1 hover:underline hover:text-black">
-                <a href="https://reverencecapital.com">Analyst @ Reverence Capital Partners</a>
+                <a href="https://reverencecapital.com">Associate @ Reverence Capital Partners</a>
               </h3>
               <span class="text-sm text-gray-500 font-light pr-8 hidden md:block">Feb 25 - Present</span>
             </div>
             <p class="pr-4">
-                Investment professional at an early-stage private credit fund focused on financial services with $1B AUM. 
+                Investment professional focused on specialty finance at an asset-backed credit fund. 
                 <!-- Building software to analyze complex data, underwriting investments, and improving team processes to deploy capital more efficiently and effectively. -->
             </p>
           </div>
@@ -127,7 +127,7 @@
               </h3>
               <span class="text-sm text-gray-500 font-light pr-8 hidden md:block">Sep 19 - Sep 20</span>
             </div>
-            <p class="pr-4">Founding member of student-led startup to make scientific papers more accessible with open-source summaries.</p>
+            <p class="pr-4">Founding member of startup to make scientific papers more accessible with open-source summaries.</p>
           </div>
         </div>
       </section>
