--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h1 class="text-5xl text-gray-900 font-bold leading-tight hover:text-black">
                 <a href="https://linkedin.com/in/grahamstodolski">Graham Stodolski</a>
             </h1>
-            <p class="text-gray-600">Product manager based in NYC. Currently at Reverence Capital Partners.</p>
+            <p class="text-gray-600">AI product manager based in NYC</p>
             <ul class="mt-6 uppercase tracking-wider">
                 <li class="inline list-none pr-4">
                     <a class="inline-block py-2 font-semibold text-xs text-gray-600 hover:text-blue" href="Graham-Stodolski-Resume.pdf">Resume</a>
